# fastgit

./: CHANGELOG.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml
fastgit/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
