[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="fastgit"
dynamic = ["version"]
description = "Use git from python, fast"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastgit"
Documentation = "https://AnswerDotAI.github.io/fastgit"

[project.entry-points.nbdev]
fastgit = "fastgit._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastgit.__version__"}

[tool.setuptools.packages.find]
include = ["fastgit"]

[tool.nbdev]
custom_sidebar = false
